move to poe + fix some desc

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,21 +81,35 @@ update_changelog_on_bump = true
 major_version_zero = true
 
 [tool.poe.tasks]
-dev = "textual run --dev rovr.__main__:cli --"
-run = "rovr"
-log = "textual console -x WORKER -x SYSTEM -x DEBUG -x EVENT"
-gen-schema = "docs/scripts/generate_schema.py"
-icon-test = "docs/scripts/icon_test.py"
-gen-keys = "docs/scripts/generate_keybinds.py"
+run.help = "Run rovr"
+run.cmd = "rovr"
+dev.help = "Run rovr in development mode with textual-dev"
+dev.cmd = "textual run --dev rovr.__main__:cli --"
+log.help = "Launch textual's console (need rovr to be launched as dev)"
+log.cmd = "textual console -x WORKER -x SYSTEM -x DEBUG -x EVENT"
+gen-schema.help = "Generate the JSON schema for rovr's config"
+gen-schema.cmd = "docs/scripts/generate_schema.py"
+icon-test.help = "Print all available icons to the terminal for testing"
+icon-test.cmd = "docs/scripts/icon_test.py"
+gen-keys.help = "Generate the keybinds documentation"
+gen-keys.cmd = "docs/scripts/generate_keybinds.py"
+check.help = "Run all checks (type checking and linting)"
 check.sequence = [
   { cmd = "ty check" },
   { cmd = "ruff check" }
 ]
+format.help = "Run ruff related formatters"
 format.sequence = [{ cmd = "ruff check --unsafe-fixes --fix"}, { cmd = "ruff format"}]
-fmt = ["format"]
-screenshot-format = "pnpx prettier --write docs/public/screenshots/*.svg --parser html --bracket-same-line --print-width 160"
-flame = "pyinstrument --renderer=html --timeline --use-timing-thread --show-all -m rovr"
-screen-test = "textual run rovr.screens.__main__"
+fmt.help = "(alias) Run ruff related formatters"
+fmt.sequence = ["format"]
+screenshot-format.help = "Format all SVG screenshots in the docs"
+screenshot-format.cmd = 'pnpx prettier --write "docs/public/screenshots/*.svg" --parser html --bracket-same-line --print-width 160'
+svg-fmt.help = "(alias) Format all SVG files in the docs"
+svg-fmt.sequence = ["screenshot-format"]
+build.help = "Build rovr into a single executable using Nuitka"
+build.cmd = 'nuitka --mode=onefile --assume-yes-for-downloads --enable-plugins=no-qt --python-flag=-m --python-flag="no_docstrings" --include-package-data=rovr --lto=yes src/rovr --onefile-cache-mode=cached --onefile-child-grace-time=0'
+flame.help = "Start rovr with pyinstrument for flamegraph profiling"
+flame.cmd = "pyinstrument --renderer=html --timeline --use-timing-thread --show-all -m rovr"
 
 [tool.ruff]
 force-exclude = true
