--- a/src/rovr/config/keybinds/vim.toml
+++ b/src/rovr/config/keybinds/vim.toml
@@ -56,6 +56,7 @@ show_keybinds = ["?"]
 quit_app = ["q", "ctrl+q"]
 command_palette = "ctrl+p"
 suspend_app = ["ctrl+z"]
+open_editor = ["e"]
 
 [keybinds.change_sort_order]
 open_popup = [","]
@@ -98,9 +99,6 @@ dont_ask_again = ["a"]
 # plugins
 [plugins.zoxide]
 keybinds = ["z"]
-
-[plugins.editor]
-keybinds = ["e"]
 
 [plugins.fd]
 keybinds = ["f"]
