--- a/src/rovr/config/keybinds/vim.toml
+++ b/src/rovr/config/keybinds/vim.toml
@@ -57,6 +57,13 @@ command_palette = "ctrl+p"
 suspend_app = ["ctrl+z"]
 open_editor = ["e"]
 
+[keybinds.extra_copy]
+open_popup = ["Y"]
+copy_to_rovr = ["y"]
+copy_single_path = ["p"]
+copy_to_system_clip = ["s"]
+copy_parent_path = ["d"]
+
 [keybinds.change_sort_order]
 open_popup = [","]
 name = ["a"]
