--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -192,15 +192,16 @@ tab_next = ["ctrl+j"]
 tab_previous = ["ctrl+k"]
 tab_new = ["n"]
 tab_close = ["w"]
-preview_scroll_left = ["left", "h"]
-preview_scroll_right = ["right", "l"]
-preview_select_left = ["shift+left", "H"]
-preview_select_right = ["shift+right", "L"]
 show_keybinds = ["?"]
 quit_app = ["q", "ctrl+q"]
 command_palette = "ctrl+p"
 suspend_app = ["ctrl+z"]
 open_editor = ["e"]
+# unavailable for now
+preview_select_left = []
+preview_select_right = []
+preview_scroll_left = []
+preview_scroll_right = []
 [keybinds.change_sort_order]
 open_popup = [","]
 name = ["a"]
