--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,7 @@
     "@astrojs/sitemap": "^3.7.0",
     "@astrojs/starlight": "^0.37.3",
     "astro": "^5.16.11",
-    "astro-mermaid": "github:joesaby/astro-mermaid#v1.2.1",
+    "astro-mermaid": "^1.3.1",
     "mermaid": "^11.12.2",
     "sharp": "^0.34.5",
     "starlight-contributor-list": "^0.3.2"
