--- a/src/rovr/config/keybinds/vim.toml
+++ b/src/rovr/config/keybinds/vim.toml
@@ -60,9 +60,9 @@ open_editor = ["e"]
 [keybinds.extra_copy]
 open_popup = ["Y"]
 copy_to_rovr = ["y"]
-copy_single_path = ["p"]
+copy_single_path = ["c"]
 copy_to_system_clip = ["s"]
-copy_parent_path = ["d"]
+copy_current_directory = ["d"]
 
 [keybinds.change_sort_order]
 open_popup = [","]
