--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -206,7 +206,7 @@ open_popup = ["Y"]
 copy_to_rovr = ["y"]
 copy_single_path = ["p"]
 copy_to_system_clip = ["s"]
-copy_parent_path = ["d"]
+copy_current_directory = ["d"]
 [keybinds.change_sort_order]
 open_popup = [","]
 name = ["a"]
