--- a/src/rovr/config/keybinds/sane.toml
+++ b/src/rovr/config/keybinds/sane.toml
@@ -67,16 +67,16 @@ open_editor = ["ctrl+o"]
 
 [keybinds.extra_copy]
 open_popup = ["C"]
-copy_to_rovr = ["y"]
+copy_to_rovr = ["r"]
 copy_single_path = ["p"]
 copy_to_system_clip = ["s"]
-copy_parent_path = ["d"]
+copy_current_directory = ["u"]
 
 [keybinds.change_sort_order]
 open_popup = ["o"]
-name = ["n"]
+name = ["a"]
 extension = ["e"]
-natural = ["t"]
+natural = ["n"]
 size = ["s"]
 created = ["c"]
 modified = ["m"]
