feat(copy-button)!: add popup for more copy options (#200)
resolves #131

simultaneously is a refactor to clean up copy button code

Co-authored-by: NSPBot911 <176916861+NSPBot911@users.noreply.github.com>

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -166,7 +166,6 @@ zip = ["E"]
 unzip = ["ctrl+e"]
 # id love to use ctrl+shift+c
 # but that is taken by terminals
-copy_path = ["Y"]
 up = ["up", "k"]
 down = ["down", "j"]
 up_tree = ["left", "h"]
@@ -200,6 +199,12 @@ preview_select_left = []
 preview_select_right = []
 preview_scroll_left = []
 preview_scroll_right = []
+[keybinds.extra_copy]
+open_popup = ["Y"]
+copy_to_rovr = ["y"]
+copy_single_path = ["p"]
+copy_to_system_clip = ["s"]
+copy_current_directory = ["d"]
 [keybinds.change_sort_order]
 open_popup = [","]
 name = ["a"]
