--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -7,7 +7,7 @@ body:
   - type: textarea
     id: bug-description
     attributes:
-      label: Issue descripton
+      label: Issue description
       description: Describe what happened that resulted in the crash
       placeholder: The issue happened when I do ..., but it never happens consistently unless I do ...
     validations:
