--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ screenshot-format.cmd = 'pnpx prettier --write "docs/public/screenshots/*.svg" -
 svg-fmt.help = "(alias) Format all SVG files in the docs"
 svg-fmt.sequence = ["screenshot-format"]
 build.help = "Build rovr into a single executable using Nuitka"
-build.cmd = 'nuitka --mode=onefile --assume-yes-for-downloads --enable-plugins=no-qt --python-flag=-m --python-flag="no_docstrings" --include-package-data=rovr --lto=yes src/rovr --onefile-cache-mode=cached --onefile-child-grace-time=0'
+build.cmd = 'nuitka --mode=onefile --assume-yes-for-downloads --enable-plugins=no-qt --python-flag=-m --python-flag="no_docstrings" --include-package-data=rovr --lto=yes src/rovr --onefile-cache-mode=cached --onefile-child-grace-time=0 --user-package-configuration-file=nuitka.config.yml'
 flame.help = "Start rovr with pyinstrument for flamegraph profiling"
 flame.cmd = "pyinstrument --renderer=html --timeline --use-timing-thread --show-all -m rovr"
 
