--- a/nuitka.config.yml
+++ b/nuitka.config.yml
@@ -1,4 +1,4 @@
-- module-name: 'rich'
+- module-name: 'rich' # checksum: ecf5cc77
   implicit-imports:
     - depends:
         - 'rich._unicode_data.*'
