--- a/.github/workflows/try-build.yml
+++ b/.github/workflows/try-build.yml
@@ -63,27 +63,17 @@ jobs:
       - name: Ensure latest factory version of nuitka
         run: uv sync --upgrade-package nuitka --dev
 
-      - name: Build with Nuitka (onefile)
-        run: uv run poe build onefile
-
-      - name: Upload Executable
-        uses: actions/upload-artifact@v4
-        with:
-          path: ${{ matrix.executable }}
-          name: rovr-${{ matrix.name }}-nuitka-onefile
-          retention-days: 30
-
-      - name: Build with Nuitka (standalone)
+      - name: Build with Nuitka
         shell: pwsh
         run: |
           Remove-Item -Recurse -Force rovr.dist -ErrorAction SilentlyContinue
           uv run poe build standalone
 
-      - name: Upload Executable (standalone)
+      - name: Upload Executable
         uses: actions/upload-artifact@v4
         with:
           path: rovr.dist
-          name: rovr-${{ matrix.name }}-nuitka-standalone
+          name: rovr-${{ matrix.name }}-nuitka
           retention-days: 30
 
   notify-nuitka-completion:
@@ -105,127 +95,6 @@ jobs:
             - [linux-arm64](https://nightly.link/NSPC911/rovr/actions/runs/${{ github.run_id }}/rovr-linux-arm64-nuitka.zip)
             - [macos-arm64](https://nightly.link/NSPC911/rovr/actions/runs/${{ github.run_id }}/rovr-macos-arm64-nuitka.zip)
             - [macos-x64](https://nightly.link/NSPC911/rovr/actions/runs/${{ github.run_id }}/rovr-macos-x64-nuitka.zip)
-            -# caused by ${{ github.actor }}
-          avatar_url: "https://avatars.githubusercontent.com/u/176916861?v=4"
-          username: "NSPBot911"
-          nodetail: true
-          notimestamp: true
-          noprefix: true
-
-  build-pyapp:
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - os: windows-latest
-            name: windows-x64
-            executable: rovr.exe
-          - os: windows-11-arm
-            name: windows-arm
-            executable: rovr.exe
-          - os: ubuntu-latest
-            name: linux-x64
-            executable: rovr.bin
-          - os: ubuntu-24.04-arm
-            name: linux-arm64
-            executable: rovr.bin
-          - os: macos-latest
-            name: macos-arm64
-            executable: rovr.bin
-          - os: macos-15
-            name: macos-x64
-            executable: rovr.bin
-
-    runs-on: ${{ matrix.os }}
-    name: PyApp Build (${{ matrix.name }})
-    if: false # temporary disable
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup uv
-        uses: astral-sh/setup-uv@v6
-        with:
-          activate-environment: true
-          python-version: "3.13"
-
-      - name: Cache .venv
-        uses: actions/cache@v4
-        with:
-          path: .venv
-          key: venv-${{ matrix.name }}
-          restore-keys: |
-            venv-${{ matrix.name }}
-
-      - name: Build wheel
-        run: uv build
-
-      - name: Checkout PyApp
-        uses: actions/checkout@v4
-        with:
-          repository: ofek/pyapp
-          path: pyapp
-          ref: 09bfa79cebf2ffc9fb54bda916043ce6165b984a
-
-      - name: Get ls
-        run: ls
-
-      - name: Pull Cargo Cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            pyapp/target
-          key: cargo-${{ matrix.name }}
-
-      - name: Build with pyapp
-        run: |
-          $env:PYAPP_PROJECT_PATH=(Get-Item "$($PWD.Path)/dist/*.whl" | Select -Expand FullName)
-          $env:PYAPP_PROJECT_NAME="rovr"
-          $env:PYAPP_DISTRIBUTION_EMBED="1"
-          $env:PYAPP_UV_ENABLED="1"
-          cd pyapp
-          cargo build --release
-        shell: pwsh
-
-      - name: Rename executable
-        shell: pwsh
-        if: ${{ matrix.executable == 'rovr.bin' }}
-        run: |
-          Move-Item "pyapp/target/release/pyapp" "pyapp/target/release/${{ matrix.executable }}" -Force
-
-      - name: Rename executable
-        shell: pwsh
-        if: ${{ matrix.executable == 'rovr.exe' }}
-        run: |
-          Move-Item "pyapp/target/release/pyapp.exe" "pyapp/target/release/${{ matrix.executable }}" -Force
-
-      - name: Upload Executable
-        uses: actions/upload-artifact@v4
-        with:
-          path: pyapp/target/release/${{ matrix.executable }}
-          name: rovr-${{ matrix.name }}-pyapp
-          retention-days: 30
-
-  notify-pyapp-completion:
-    needs: build-pyapp
-    runs-on: ubuntu-latest
-    name: Notify PyApp Completion
-    steps:
-      - name: Notify Discord - PyApp Complete
-        uses: sarisia/actions-status-discord@v1.13.0
-        with:
-          webhook: ${{ secrets.LOG_HOOK }}
-          title: rovr pyapp builds complete!
-          status: ${{ job.status }}
-          description: |
-            Download artifacts:
-            - [windows-x64](https://nightly.link/NSPC911/rovr/actions/runs/${{ github.run_id }}/rovr-windows-x64-pyapp.zip)
-            - [windows-arm](https://nightly.link/NSPC911/rovr/actions/runs/${{ github.run_id }}/rovr-windows-arm-pyapp.zip)
-            - [linux-x64](https://nightly.link/NSPC911/rovr/actions/runs/${{ github.run_id }}/rovr-linux-x64-pyapp.zip)
-            - [linux-arm64](https://nightly.link/NSPC911/rovr/actions/runs/${{ github.run_id }}/rovr-linux-arm64-pyapp.zip)
-            - [macos-arm64](https://nightly.link/NSPC911/rovr/actions/runs/${{ github.run_id }}/rovr-macos-arm64-pyapp.zip)
-            - [macos-x64](https://nightly.link/NSPC911/rovr/actions/runs/${{ github.run_id }}/rovr-macos-x64-pyapp.zip)
             -# caused by ${{ github.actor }}
           avatar_url: "https://avatars.githubusercontent.com/u/176916861?v=4"
           username: "NSPBot911"
