--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -1,8 +1,9 @@
 name: Build with Nuitka and PyApp
 
 on:
+  # run every day as well
   schedule:
-    - cron: "0 16 * * 6"
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
