feat(filelist): add bypass up and down support

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -171,6 +171,8 @@ up = ["up", "k"]
 down = ["down", "j"]
 up_tree = ["left", "h"]
 down_tree = ["right", "l", "enter"]
+bypass_up_tree = ["H"]
+bypass_down_tree = ["L"]
 page_up = ["pageup", "ctrl+b"]
 page_down = ["pagedown", "ctrl+f"]
 home = ["home", "g"]
