--- a/src/rovr/config/keybinds/sane.toml
+++ b/src/rovr/config/keybinds/sane.toml
@@ -32,6 +32,8 @@ up = ["up"]
 down = ["down"]
 up_tree = ["left", "alt+up"]
 down_tree = ["right", "enter"]
+bypass_up_tree = ["shift+left"]
+bypass_down_tree = ["shift+right"]
 page_up = ["pageup"]
 page_down = ["pagedown"]
 home = ["home"]
