--- a/src/rovr/config/keybinds/vim.toml
+++ b/src/rovr/config/keybinds/vim.toml
@@ -29,6 +29,8 @@ up = ["k", "up"]
 down = ["j", "down"]
 up_tree = ["h", "left"]
 down_tree = ["l", "right", "enter"]
+bypass_up_tree = ["H"]
+bypass_down_tree = ["L"]
 page_up = ["ctrl+b", "pageup"]
 page_down = ["ctrl+f", "pagedown"]
 home = ["g"]
