feat: add resvg support
fun fact: doesnt depend on external dependencies, because it itself is
the dependency

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -40,6 +40,7 @@ panels = false
 
 [interface.mime_rules]
 "text/*" = "text"
+"image/svg+xml" = "resvg"
 "image/*" = "image"
 "application/pdf" = "pdf"
 "application/zip" = "archive"
